--- a/TA-zscaler-api/default/props.conf
+++ b/TA-zscaler-api/default/props.conf
@@ -14,3 +14,6 @@ category = Structured
 description = Splunk App Add-on Builder JSON format
 pulldown_type = true
 
+[source::...zscaler_zpa_action_modalert.log*]
+sourcetype = tazscalerapi:log
+
