Few fixes and update upstream python code pyzscaler to v1.1.0

--- a/TA-zscaler-api/default/props.conf
+++ b/TA-zscaler-api/default/props.conf
@@ -1,16 +1,9 @@
-﻿
-[source::...ta-zscaler-api*.log*]
-sourcetype = tazscalerapi:log
-
-[zscaler:api:zpa]
+﻿[zscaler:api:zpa]
 DATETIME_CONFIG = CURRENT
 INDEXED_EXTRACTIONS = json
+KV_MODE = none
 LINE_BREAKER = ([\r\n]+)
 NO_BINARY_CHECK = true
 category = Structured
 description = Splunk App Add-on Builder JSON format
 pulldown_type = true
-
-[source::...zscaler_zpa_action_modalert.log*]
-sourcetype = tazscalerapi:log
-
