Adding ZIA input integration

--- a/TA-zscaler-api/default/inputs.conf
+++ b/TA-zscaler-api/default/inputs.conf
@@ -1,3 +1,11 @@
+[zscaler_zia_configurations]
+start_by_shell = false
+python.version = python3
+sourcetype = zscaler:api:zia
+interval = 86400
+items = []
+disabled = 0
+
 [zscaler_zpa_configurations]
 start_by_shell = false
 python.version = python3
