--- a/TA-zscaler-api/default/props.conf
+++ b/TA-zscaler-api/default/props.conf
@@ -1,3 +1,4 @@
+
 ﻿[zscaler:api:zpa]
 DATETIME_CONFIG = CURRENT
 INDEXED_EXTRACTIONS = json
@@ -7,3 +8,12 @@ NO_BINARY_CHECK = true
 category = Structured
 description = Splunk App Add-on Builder JSON format
 pulldown_type = true
+[zscaler:api:zia]
+DATETIME_CONFIG = CURRENT
+INDEXED_EXTRACTIONS = json
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = true
+category = Structured
+description = Splunk App Add-on Builder JSON format
+pulldown_type = true
+
