--- a/TA-zscaler-api/default/restmap.conf
+++ b/TA-zscaler-api/default/restmap.conf
@@ -1,7 +1,7 @@
 
 [admin:TA_zscaler_api]
 match = /
-members = TA_zscaler_api_account, TA_zscaler_api_settings, TA_zscaler_api_zscaler_zpa_configurations
+members = TA_zscaler_api_account, TA_zscaler_api_settings, TA_zscaler_api_zscaler_zia_configurations, TA_zscaler_api_zscaler_zpa_configurations
 
 [admin_external:TA_zscaler_api_account]
 handlertype = python
@@ -15,6 +15,13 @@ handlertype = python
 python.version = python3
 handlerfile = TA_zscaler_api_rh_settings.py
 handleractions = edit, list
+handlerpersistentmode = true
+
+[admin_external:TA_zscaler_api_zscaler_zia_configurations]
+handlertype = python
+python.version = python3
+handlerfile = TA_zscaler_api_rh_zscaler_zia_configurations.py
+handleractions = edit, list, remove, create
 handlerpersistentmode = true
 
 [admin_external:TA_zscaler_api_zscaler_zpa_configurations]
