--- a/TA-zscaler-api/default/web.conf
+++ b/TA-zscaler-api/default/web.conf
@@ -15,6 +15,14 @@ methods = POST, GET
 pattern = TA_zscaler_api_settings/*
 methods = POST, GET, DELETE
 
+[expose:TA_zscaler_api_zscaler_zia_configurations]
+pattern = TA_zscaler_api_zscaler_zia_configurations
+methods = POST, GET
+
+[expose:TA_zscaler_api_zscaler_zia_configurations_specified]
+pattern = TA_zscaler_api_zscaler_zia_configurations/*
+methods = POST, GET, DELETE
+
 [expose:TA_zscaler_api_zscaler_zpa_configurations]
 pattern = TA_zscaler_api_zscaler_zpa_configurations
 methods = POST, GET
