Fix compatibility with Splunk Cloud

--- a/TA-zscaler-api/default/props.conf
+++ b/TA-zscaler-api/default/props.conf
@@ -1,13 +1,3 @@
-
-﻿[zscaler:api:zpa]
-DATETIME_CONFIG = CURRENT
-INDEXED_EXTRACTIONS = json
-KV_MODE = none
-LINE_BREAKER = ([\r\n]+)
-NO_BINARY_CHECK = true
-category = Structured
-description = Splunk App Add-on Builder JSON format
-pulldown_type = true
 [zscaler:api:zia]
 DATETIME_CONFIG = CURRENT
 INDEXED_EXTRACTIONS = json
@@ -16,4 +6,13 @@ NO_BINARY_CHECK = true
 category = Structured
 description = Splunk App Add-on Builder JSON format
 pulldown_type = true
+
+[zscaler:api:zpa]
+DATETIME_CONFIG = CURRENT
+INDEXED_EXTRACTIONS = json
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = 1
+category = Structured
+description = Splunk App Add-on Builder JSON format
+pulldown_type = 1
 
