Add the possibility to add URLs to a category in ZIA Fix some issues

--- a/TA-zscaler-api/default/alert_actions.conf
+++ b/TA-zscaler-api/default/alert_actions.conf
@@ -8,3 +8,11 @@ is_custom = 1
 payload_format = json
 icon_path = alert_zscaler_zpa_action.png
 
+[zscaler_zia_execute_action]
+python.version = python3
+description = This alert action is used to realize an action in Zscaler ZIA
+label = Zscaler ZIA : Execute action
+is_custom = 1
+payload_format = json
+icon_path = alert_zscaler_zia_execute_action.png
+
