--- a/TA-zscaler-api/default/props.conf
+++ b/TA-zscaler-api/default/props.conf
@@ -16,3 +16,6 @@ category = Structured
 description = Splunk App Add-on Builder JSON format
 pulldown_type = 1
 
+[source::...zscaler_zia_execute_action_modalert.log*]
+sourcetype = tazscalerapi:log
+
