Support several instances in parallel (max 3), mostly used for custom alert action on several instances at the same time

--- a/TA-zscaler-api/default/alert_actions.conf
+++ b/TA-zscaler-api/default/alert_actions.conf
@@ -7,6 +7,8 @@ label = Zscaler ZPA : Execute action
 is_custom = 1
 payload_format = json
 icon_path = alert_zscaler_zpa_action.png
+param.instances = 1
+param.account_usernames = {"1": "MY_USERNAME"}
 
 [zscaler_zia_execute_action]
 python.version = python3
@@ -15,4 +17,6 @@ label = Zscaler ZIA : Execute action
 is_custom = 1
 payload_format = json
 icon_path = alert_zscaler_zia_execute_action.png
+param.instances = 1
+param.account_usernames = {"1": "MY_USERNAME"}
 
