Fix issues + review current way of handling several accounts (not using a dict anymore, use dedicated fields)

--- a/TA-zscaler-api/default/alert_actions.conf
+++ b/TA-zscaler-api/default/alert_actions.conf
@@ -8,7 +8,9 @@ is_custom = 1
 payload_format = json
 icon_path = alert_zscaler_zpa_action.png
 param.instances = 1
-param.account_usernames = {"1": "MY_USERNAME"}
+param.account_username_instance_1 = -
+param.account_username_instance_2 = -
+param.account_username_instance_3 = -
 
 [zscaler_zia_execute_action]
 python.version = python3
@@ -18,5 +20,7 @@ is_custom = 1
 payload_format = json
 icon_path = alert_zscaler_zia_execute_action.png
 param.instances = 1
-param.account_usernames = {"1": "MY_USERNAME"}
+param.account_username_instance_1 = -
+param.account_username_instance_2 = -
+param.account_username_instance_3 = -
 
