cd: improve way of generating SPL file

--- a/TA-zscaler-api/default/alert_actions.conf
+++ b/TA-zscaler-api/default/alert_actions.conf
@@ -11,6 +11,7 @@ param.instances = 1
 param.account_username_instance_1 = -
 param.account_username_instance_2 = -
 param.account_username_instance_3 = -
+param.action = 
 
 [zscaler_zpa_action]
 python.version = python3
@@ -23,4 +24,5 @@ param.instances = 1
 param.account_username_instance_1 = -
 param.account_username_instance_2 = -
 param.account_username_instance_3 = -
+param.action = 
 
