--- a/TA-zscaler-api/default/app.conf
+++ b/TA-zscaler-api/default/app.conf
@@ -1,7 +1,7 @@
 # this add-on is powered by splunk Add-on builder
 [install]
 state_change_requires_restart = false
-is_configured = 0
+is_configured = false
 state = enabled
 build = 11
 
@@ -23,4 +23,3 @@ reload.addon_builder = simple
 reload.ta_zscaler_api_account = simple
 reload.ta_zscaler_api_settings = simple
 reload.passwords = simple
-
