--- a/TA-zscaler-api/default/inputs.conf
+++ b/TA-zscaler-api/default/inputs.conf
@@ -1,18 +1,18 @@
 [zscaler_zia_configurations]
+index = default
 start_by_shell = false
 python.version = python3
 sourcetype = zscaler:api:zia
 interval = 86400
 instance = 1
 items = []
-disabled = 0
 
 [zscaler_zpa_configurations]
+index = default
 start_by_shell = false
 python.version = python3
 sourcetype = zscaler:api:zpa
 interval = 86400
 instance = 1
 items = []
-disabled = 0
 
