--- a/TA-zscaler-api/default/props.conf
+++ b/TA-zscaler-api/default/props.conf
@@ -1,21 +1,19 @@
-[zscaler:api:zia]
-DATETIME_CONFIG = CURRENT
-INDEXED_EXTRACTIONS = json
-LINE_BREAKER = ([\r\n]+)
-NO_BINARY_CHECK = true
-category = Structured
-description = Splunk App Add-on Builder JSON format
-pulldown_type = true
+[source::...zscaler_zia_execute_action_modalert.log*]
+sourcetype = tazscalerapi:log
 
 [zscaler:api:zpa]
 DATETIME_CONFIG = CURRENT
-INDEXED_EXTRACTIONS = json
 LINE_BREAKER = ([\r\n]+)
 NO_BINARY_CHECK = 1
 category = Structured
 description = Splunk App Add-on Builder JSON format
 pulldown_type = 1
 
-[source::...zscaler_zia_execute_action_modalert.log*]
-sourcetype = tazscalerapi:log
+[zscaler:api:zia]
+DATETIME_CONFIG = CURRENT
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = 1
+category = Structured
+description = Splunk App Add-on Builder JSON format
+pulldown_type = 1
 
